<resources>
    <string name="app_name">PunchClock</string>

    <string name="bottom_nav_home">Home</string>
    <string name="bottom_nav_favorites">Favorites</string>
    <string name="bottom_nav_settings">Settings</string>

    <string name="no_title">No title</string>
    <string name="new_title">New Title</string>
    <string name="new_title2">New Title2</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="category_name_hint">Category Name</string>
    <string name="add_category_save_button">Save</string>
    <string name="add_category_fragment_create">Create</string>
    <string name="add_category_fragment_cancel">Cancel</string>
    <string name="play_button">PLAY</string>
    <string name="default_timer">00:00:00</string>


    <string name="start_button">Start</string>
    <string name="pause_button">Pause</string>
    <string name="reset_button">Reset</string>
    <string name="commit_button">Commit</string>
    <string name="category_default_detail_activity">Category</string>
    <string name="fav_heart_content_desc">favorite</string>
    <string name="stop_button">Stop</string>
    <string name="title_activity_main2">Main2Activity</string>
</resources>
